# llvm-pass-skeleton

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Proj2/: CMakeLists.txt  Proj2.cpp
test_inputs/: Makefile
test_inputs/bc/: test.bc
test_inputs/ir/: test.ll
test_inputs/src/: test.c
